[package]
name = "cairo-bootloader-hints"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
thiserror-no-std.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
cairo-vm.workspace = true
num-traits.workspace = true
starknet-types-core.workspace = true
starknet-crypto.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"