[package]
name = "cairo-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "bin/api.rs"

[dependencies]
garaga-zero = { path = "../../cairo/packages/garaga_zero" }
bankai-stwo-prover = { path = "../stwo_prover" }
bankai-hints = { path = "../bankai_hints" }
mmr-header-accumulator-hints.workspace = true
stone-verifier-hints = { path = "../stone_verifier_hints" }
cairo-vm-base.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
hex.workspace = true
beacon_types.workspace = true
tracing.workspace = true
bincode.workspace = true
clap.workspace = true
alloy-primitives.workspace = true
bls12_381.workspace = true
tree_hash.workspace = true
warp.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
rayon = "1.10"
num_cpus = "1.16"