[package]
name = "cairo-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-bootloader-hints = { path = "../cairo_bootloader_hints" }
cairo-lang-casm.workspace = true
cairo-vm.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true
starknet-types-core.workspace = true
starknet-crypto.workspace = true
tracing.workspace = true
bincode.workspace = true
clap.workspace = true
cairo-lang-executable.workspace = true
cairo-lang-execute-utils.workspace = true
cairo-lang-runner.workspace = true
rayon = "1.10"
num_cpus = "1.16"